--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: #eee;
-    user-select: none;
+    user-select: none; 
+    font-family: "Cinzel", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
-
 .container {
     margin: 0;
     height: 100vh;
@@ -25,23 +28,23 @@ body {
 }
 /* ----------- Header Styles ------------ */
 .title {
-    grid-area: title;
-    color: #333;
+    color: #000000;
     margin: auto 20px;
+    text-align: center;
 }
 
 .subtitle {
     grid-area: subtitle;
-    color: #666;
-    margin: auto 20px;
+    color: #000000;
+    margin: auto;
+    text-align: center;
 }
 
 #congrats {
     grid-area: congrats;
-    color: #36993b;    
+    color: #4fc955;    
     visibility: hidden;
     text-align: center;
-    margin: 0;
 }
 .finished #congrats {
     visibility: visible;
@@ -164,8 +167,8 @@ body {
 
 }
 .toptext {
-    color: #666;
-    margin: 8px;
+    color: #c100cf;
+    margin: 10px;
     overflow: hidden;
     /* The other contains are probably not important.
      * But this one might be, as the timer changes every second,
@@ -174,6 +177,7 @@ body {
     width: 15em;
     height: 1.2em;
     line-height: 1.2em;
+    text-align: center;
 }
 .found-quad {
     display: flex;
@@ -206,7 +210,7 @@ body {
     grid-area: buttons;
 }
 .finished #timer {
-    color: #36993b;
+    color: #000000;
 }
 
 /* ----------- Animations -------------- */
